--- a/eval.cfg
+++ b/eval.cfg
@@ -1,9 +1,7 @@
 -use_gui
 -num_episodes=1
--network_file=weights/weights_20221024_300.pth
-# -network_file=weights/weights_20220922_160309_1449000.pth
-# -network_file=weights/weights_20220922_174036_2595000.pth
+-network_file=weights/weights_20221112_500.pth
 -mode=eval
-# -flagfile=D:\gitee\traffic_light_rl\eval.cfg
+# -flagfile=D:\github\traffic_light_rl\eval.cfg
 
 
