flagfile path change

--- a/eval.cfg
+++ b/eval.cfg
@@ -2,6 +2,6 @@
 -num_episodes=1
 -network_file=weights/weights_20221112_500.pth
 -mode=eval
-# -flagfile=D:\github\traffic_light_rl\eval.cfg
+# -flagfile=eval.cfg
 
 
